# belgeselsemoflix

./: .gitignore  README.md  package.json  popup.html  run.bat  run.command  run.sh  webapp.secure.enc
.githooks/: pre-commit  pre-push
.github/: appimage-builder.yml
.github/workflows/: build.yml
desktop-shell/: index.html
promo/: promo.html
scripts/: build-appimage-from-deb.sh  build-windows-assets-pack.ps1  manage_webapp_archive.py  prepare-windows-portable.ps1  restore_webapp_for_ci.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/portable-launcher/: Cargo.toml  build.rs
src-tauri/portable-launcher/src/: main.rs
src-tauri/src/: main.rs
webapp/: data-proxy.php  fileq.php  filespayouts.php  index.html  index.php  premium.php  stream-proxy.php  youtube-proxy.php
webapp/css/: mobile-menu.css  style.css
webapp/html-tools/: belgeselsemo-besteleyici.html  belgeselsemo-ceviri.html  belgeselsemo-ekonomi.html  belgeselsemo-epg-viewer.html  belgeselsemo-hava-durumu.html  belgeselsemo-muzik-player.html  belgeselsemo-notepad.html  belgeselsemo-pdf-viewer.html  belgeselsemo-takvim.html  belgeselsemo-wiki.html  extra-tv-belgeseller.html  hesap-makinesi.html  nobetci-eczaneler.html
webapp/js/: app.js  youtube-client-simple.js
