[package]
name = "belgeselsemoflix"
version = "1.0.0"
description = "BELGESELSEMOFLIX desktop shell"
authors = ["Codex"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

