[package]
name = "belgeselsemoflix"
version = "1.0.0"
description = "BELGESELSEMOFLIX desktop shell"
authors = ["Codex"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "belgeselsemoflix"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["unstable"] }
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
